@@ -62,7 +62,7 @@ public class GuideNavBar extends AbstractWidget {
     }
 
     @Override
-    public void onClick(double mouseX, double mouseY) {
+    public void onClick(double mouseX, double mouseY, int button) {
         if (state != State.OPENING && state != State.OPEN) {
             return;
         }
@@ -109,7 +109,7 @@ public class GuideNavBar extends AbstractWidget {
         var maxScrollOffset = 0;
         var visibleRows = rows.stream().filter(Row::isVisible).toList();
         if (!visibleRows.isEmpty()) {
-            var contentHeight = visibleRows.get(visibleRows.size() - 1).bottom - visibleRows.get(0).top;
+            var contentHeight = visibleRows.getLast().bottom - visibleRows.getFirst().top;
             maxScrollOffset = Math.max(0, contentHeight - height);
         }
         scrollOffset = Mth.clamp(offset, 0, maxScrollOffset);
